Opened 8 years ago
Closed 8 years ago
#2103 closed defect (fixed)
wrong pkt in range check in the ffplay
Reported by: | chinshou | Owned by: | |
---|---|---|---|
Priority: | normal | Component: | ffplay |
Version: | git-master | Keywords: | |
Cc: | Blocked By: | ||
Blocking: | Reproduced by developer: | no | |
Analyzed by developer: | no |
Description
the packet in range check does not check whether start time is equal to AV_NOPTS_VALUE. if ic->streams[pkt->stream_index]->start_time == AV_NOPTS_VALUE ,following code will not generate correct result.
pkt_in_play_range = duration == AV_NOPTS_VALUE (pkt->pts - ic->streams[pkt->stream_index]->start_time) *
av_q2d(ic->streams[pkt->stream_index]->time_base) -
(double)(start_time != AV_NOPTS_VALUE ? start_time : 0) / 1000000
<= ((double)duration / 1000000);
Change History (2)
comment:1 Changed 8 years ago by cehoyos
comment:2 Changed 8 years ago by cehoyos
- Resolution set to fixed
- Status changed from new to closed
Fixed by Marton in f07cb53.
Note: See
TracTickets for help on using
tickets.
Please either provide a failing sample (including failing command line including complete, uncut console output) or send a patch to ffmpeg-devel.