ffplay: assume 0 stream start time if start time is unset in duration check

Fixes ticket #2103 and #2743.

Signed-off-by: Marton Balint <cus@passwd.hu>